--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       font-size: 24px;
       display: none;
     }
+
+     body{
+        background: rgb(42, 41, 41);
+    }
   </style>
 </head>
 <body>
